kube/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: babel-node-starter-kit-service
  namespace: babel-node-starter-kit-np # Match with namespace
spec:
  type: ClusterIP
  ports:
  - port: 80 # Port that allow nginx to communicate
    targetPort: 5000 # Match with MARK C.1
    protocol: TCP
  selector:
    app: babel-node-starter-kit # Match with MARK C
