kube/nginx-ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: http-proxy-ingress
  namespace: http-proxy-ns # Change this
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 5000m
spec:
  tls:
    - hosts:
      - proxy.codefactory.site # [TODO] Change this to your host
      secretName: proxy-codefactory-site-tls # [TODO] Change this to anything
  rules:
  - host: proxy.codefactory.site # [TODO] Change this to your host
    http:
      paths:
      - path: /
        backend:
          serviceName: http-proxy-service
          servicePort: 80
